tests/src/frontend/typechecking/invalid/access_readonly_2.sk
mutable class Foo<T>(mutable v: T)
mutable class Bar<T>(mutable v: mutable Foo<T>)
fun test1(opt: readonly Bar<Int>): void {
  opt.v.!v = 0
}
